<resources>
    <string name="app_name" translatable="false">Signal</string>
    <string name="install_url" translatable="false">https://signal.org/install</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus" translatable="false">\+%d</string>
    <string name="ApplicationMigrationActivity__signal_is_updating">Signal is updating…</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Signal and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Signal messages and calls…</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Signal messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Signal messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Signal your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s, Registration lock %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Screen lock %1$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <string name="ApplicationPreferencesActivity_pins_are_required_for_registration_lock">PINs are required for registration lock. To disable PINs, please first disable registration lock.</string>
    <string name="ApplicationPreferencesActivity_pin_created">PIN created.</string>
    <string name="CameraContacts__menu_search">Search</string>
    <string name="CreateProfileActivity__profile">Profile</string>
    <string name="MediaOverviewActivity_Select_all">Select all</string>
    <string name="SubmitDebugLogActivity_edit">Edit</string>
    <string name="SubmitDebugLogActivity_done">Done</string>
    <string name="arrays__images">Images</string>
    <string name="arrays__audio">Audio</string>
    <string name="arrays__video">Video</string>
    <string name="arrays__documents">Documents</string>
    <string name="preferences__generate_link_previews">Generate link previews</string>
    <string name="preferences__retrieve_link_previews_from_websites_for_messages">Retrieve link previews directly from websites for messages you send.</string>
    <string name="preferences__choose_identity">Choose identity</string>
    <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Choose your contact entry from the contacts list.</string>
    <string name="preferences__notifications">Notifications</string>
    <string name="preferences__sound">Sound</string>
    <string name="preferences__vibrate">Vibrate</string>
    <string name="preferences__advanced">Advanced</string>
    <string name="preferences__privacy">Privacy</string>
    <string name="preferences__storage">Storage</string>
    <string name="preferences__disable_pin">Disable PIN</string>
    <string name="preferences__enable_pin">Enable PIN</string>
    <string name="preferences__pins_keep_information_stored_with_signal_encrypted_so_only_you_can_access_it">PINs keep information stored with Signal encrypted so only you can access it. Your profile, settings, and contacts will restore when you reinstall. You won’t need your PIN to open the app.</string>
    <string name="preferences__signal_messages_and_calls">Signal messages and calls</string>
    <string name="preferences__advanced_pin_settings">Advanced PIN settings</string>
    <string name="preferences__free_private_messages_and_calls">Free private messages and calls to Signal users</string>
    <string name="preferences__submit_debug_log">Submit debug log</string>
    <string name="preferences__read_receipts">Read receipts</string>
    <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">If read receipts are disabled, you won\'t be able to see read receipts from others.</string>
    <string name="preferences__typing_indicators">Typing indicators</string>
    <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">If typing indicators are disabled, you won\'t be able to see typing indicators from others.</string>
    <string name="preferences_chats__when_using_mobile_data">When using mobile data</string>
    <string name="preferences_chats__when_using_wifi">When using Wi-Fi</string>
    <string name="preferences_chats__when_roaming">When roaming</string>
    <string name="preferences_chats__media_auto_download">Media auto-download</string>
    <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Relay all calls through the Signal server to avoid revealing your IP address to your contact. Enabling will reduce call quality.</string>
    <string name="preferences_advanced__always_relay_calls">Always relay calls</string>
    <string name="preferences_app_protection__communication">Communication</string>
    <string name="preferences_chats__chats">Chats</string>
    <string name="preferences_notifications__messages">Messages</string>
    <string name="preferences_notifications__events">Events</string>
    <string name="preferences_notifications__in_chat_sounds">In-chat sounds</string>
    <string name="preferences_notifications__calls">Calls</string>
    <string name="preferences_notifications__ringtone">Ringtone</string>
    <string name="preferences_events__contact_joined_signal">Contact joined Signal</string>
    <string name="preferences_communication__category_sealed_sender">Sealed Sender</string>
    <string name="preferences_communication__sealed_sender_display_indicators">Display indicators</string>
    <string name="preferences_communication__sealed_sender_display_indicators_description">Show a status icon when you select "Message details" on messages that were delivered using sealed sender.</string>
    <string name="preferences_communication__sealed_sender_allow_from_anyone">Allow from anyone</string>
    <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Enable sealed sender for incoming messages from non-contacts and people with whom you have not shared your profile.</string>
    <string name="preferences_communication__sealed_sender_learn_more">Learn more</string>
    <string name="preferences__internal_preferences" translatable="false">Internal Preferences</string>
    <string name="conversation_context__menu_message_details">Message details</string>
    <string name="conversation_context__menu_copy_text">Copy text</string>
    <string name="conversation_context__menu_delete_message">Delete message</string>
    <string name="conversation_context__menu_forward_message">Forward message</string>
    <string name="conversation_context__menu_resend_message">Resend message</string>
    <string name="conversation_context__menu_reply_to_message">Reply to message</string>
    <string name="conversation_context__reaction_multi_select">Select multiple</string>
    <string name="conversation_context_image__save_attachment">Save attachment</string>
    <string name="conversation_list_batch__menu_delete_selected">Delete selected</string>
    <string name="conversation_list_batch__menu_select_all">Select all</string>
    <string name="conversation_list_batch__menu_mark_as_read">Mark as read</string>
    <string name="conversation_list_batch__menu_mark_as_unread">Mark as unread</string>
    <string name="conversation_group_options__delivery">Delivery</string>
    <string name="conversation_group_options__conversation">Conversation</string>
    <string name="conversation_group_options__broadcast">Broadcast</string>
    <string name="text_secure_normal__menu_new_group">New group</string>
    <string name="text_secure_normal__menu_settings">Settings</string>
    <string name="text_secure_normal__menu_clear_passphrase">Lock</string>
    <string name="text_secure_normal__mark_all_as_read">Mark all read</string>
    <string name="text_secure_normal__invite_friends">Invite friends</string>
    <string name="media_preview__save_title">Save</string>
    <string name="media_preview__forward_title">Forward</string>
    <string name="media_preview__all_media_title">All media</string>
    <string name="Insights__title">Insights</string>
    <string name="preferences_app_protection__signal_pin">Signal PIN</string>
    <string name="preferences_app_protection__change_your_pin">Change your PIN</string>
    <string name="preferences_app_protection__pin_reminders">PIN reminders</string>
    <string name="preferences_app_protection__pins_keep_information_stored_with_signal_encrypted">PINs keep information stored with Signal encrypted so only you can access it. Your profile, settings, and contacts will restore when you reinstall Signal.</string>
    <string name="preferences_app_protection__add_extra_security_by_requiring_your_signal_pin_to_register">Add extra security by requiring your Signal PIN to register your phone number with Signal again.</string>
    <string name="preferences_app_protection__reminders_help_you_remember_your_pin">Reminders help you remember your PIN since it can\'t be recovered. You\'ll be asked less frequently over time.</string>
    <string name="preferences_app_protection__registration_lock">Registration Lock</string>
</resources>