<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory android:title="@string/preferences_app_protection__communication">
  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="pref_turn_only"
      android:summary="@string/preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address"
      android:title="@string/preferences_advanced__always_relay_calls" />

  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="pref_read_receipts"
      android:summary="@string/preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts"
      android:title="@string/preferences__read_receipts" />

  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="true"
      android:key="pref_typing_indicators"
      android:summary="@string/preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators"
      android:title="@string/preferences__typing_indicators" />

  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="pref_link_previews"
      android:summary="@string/preferences__retrieve_link_previews_from_websites_for_messages"
      android:title="@string/preferences__generate_link_previews" />

  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:key="preference_category_blocked"
      android:title="@string/preferences_app_protection__blocked_users" />
</org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory>

<org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory android:title="@string/preferences_communication__category_sealed_sender">
  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="pref_show_unidentifed_delivery_indicators"
      android:summary="@string/preferences_communication__sealed_sender_display_indicators_description"
      android:title="@string/preferences_communication__sealed_sender_display_indicators" />

  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="pref_universal_unidentified_access"
      android:summary="@string/preferences_communication__sealed_sender_allow_from_anyone_description"
      android:title="@string/preferences_communication__sealed_sender_allow_from_anyone" />

  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:key="pref_unidentified_learn_more"
      android:title="@string/preferences_communication__sealed_sender_learn_more" />
</org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory>
<org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory android:title="@string/preferences_app_protection__signal_pin">

  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="pref_kbs_change"
      android:summary="@string/preferences_app_protection__pins_keep_information_stored_with_signal_encrypted"
      android:title="@string/preferences_app_protection__change_your_pin" />
  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="pin.pin_reminders_enabled"
      android:summary="@string/preferences_app_protection__reminders_help_you_remember_your_pin"
      android:title="@string/preferences_app_protection__pin_reminders"/>
  <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
      android:defaultValue="false"
      android:key="kbs.v2_lock_enabled"
      android:summary="@string/preferences_app_protection__add_extra_security_by_requiring_your_signal_pin_to_register"
      android:title="@string/preferences_app_protection__registration_lock"/>
</org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory>
</PreferenceScreen>
