<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_toggle_push_messaging"
        android:title="@string/preferences__signal_messages_and_calls"
        android:summary="@string/preferences__free_private_messages_and_calls"/>

    <Preference
        android:key="pref_advanced_pin_settings"
        android:title="@string/preferences__advanced_pin_settings" />

    <Preference
        android:key="pref_choose_identity"
        android:title="@string/preferences__choose_identity"
        android:summary="@string/preferences__choose_your_contact_entry_from_the_contacts_list"/>

    <Preference android:key="pref_internal"
        android:title="@string/preferences__internal_preferences"
        app:isPreferenceVisible="false" />

    <Preference
        android:key="pref_submit_debug_logs"
        android:title="@string/preferences__submit_debug_log"/>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <Preference
        android:layout="@layout/preference_danger"
        android:key="pref_delete_account"
        android:title="@string/preferences__delete_account" />

</PreferenceScreen>
