<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/text_secure_normal__menu_new_group"
          android:id="@+id/menu_new_group" />

    <item android:title="@string/text_secure_normal__menu_clear_passphrase"
          android:id="@+id/menu_clear_passphrase" />

    <item android:title="@string/text_secure_normal__mark_all_as_read"
          android:id="@+id/menu_mark_all_read" />

    <item android:title="@string/text_secure_normal__invite_friends"
          android:id="@+id/menu_invite" />

    <item android:title="@string/text_secure_normal__filter_unread_chats"
          android:id="@+id/menu_filter_unread_chats" />

    <item android:title="@string/text_secure_normal__menu_settings"
          android:id="@+id/menu_settings" />

    <item android:title="@string/ConversationListFragment__notification_profile"
          android:id="@+id/menu_notification_profile" />

    <item android:title="@string/Insights__title"
          android:id="@+id/menu_insights"
          android:visible="false" />

</menu>
