<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory android:title="@string/preferences_notifications__messages" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:defaultValue="true"
        android:key="pref_key_enable_notifications"
        android:title="@string/preferences__notifications" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="pref_key_ringtone"
        android:title="@string/preferences__sound" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:defaultValue="true"
        android:dependency="pref_key_enable_notifications"
        android:key="pref_key_vibrate"
        android:title="@string/preferences__vibrate" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:defaultValue="true"
        android:dependency="pref_key_enable_notifications"
        android:key="pref_key_inthread_notifications"
        android:title="@string/preferences_notifications__in_chat_sounds" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory android:title="@string/preferences_notifications__calls" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:defaultValue="true"
        android:key="pref_call_notifications"
        android:title="@string/preferences__notifications" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="pref_call_ringtone"
        android:title="@string/preferences_notifications__ringtone" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:defaultValue="true"
        android:dependency="pref_call_notifications"
        android:key="pref_call_vibrate"
        android:title="@string/preferences__vibrate" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreferenceCategory android:title="@string/preferences_notifications__events" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:defaultValue="true"
        android:key="pref_enable_new_contacts_notifications"
        android:title="@string/preferences_events__contact_joined_signal" />
</PreferenceScreen>