<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="preference_category_profile"
        android:title="@string/CreateProfileActivity__profile"/>

    <org.thoughtcrime.securesms.preferences.widgets.UsernamePreference
            app:isPreferenceVisible="false"
            android:key="preference_category_username"/>

<!--    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="preference_category_sms_mms"
        android:title="@string/preferences__sms_mms" />-->

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="preference_category_notifications"
        android:title="@string/preferences__notifications" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="preference_category_app_protection"
        android:title="@string/preferences__privacy" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="preference_category_chats"
        android:title="@string/preferences_chats__chats" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="preference_category_storage"
        android:title="@string/preferences__storage" />

    <org.thoughtcrime.securesms.preferences.widgets.Mp02CommonPreference
        android:key="preference_category_advanced"
        android:title="@string/preferences__advanced" />

</PreferenceScreen>
