<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/menu_delete_selected"
      android:icon="@drawable/ic_trash_24"
      android:title="@string/conversation_list_batch__menu_delete_selected"
      app:iconTint="@color/signal_icon_tint_primary"
      app:showAsAction="always" />

  <item
      android:id="@+id/menu_mark_as_read"
      android:title="@string/conversation_list_batch__menu_mark_as_read"
      app:showAsAction="never" />

  <item
      android:id="@+id/menu_mark_as_unread"
      android:title="@string/conversation_list_batch__menu_mark_as_unread"
      app:showAsAction="never" />

  <item
      android:id="@+id/menu_select_all"
      android:title="@string/conversation_list_batch__menu_select_all"
      app:showAsAction="never" />

</menu>