<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/ic_download_filled_white_24"
        app:iconTint="@color/signal_icon_tint_primary"
        app:showAsAction="always"/>

    <item android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_trash_24"
        app:iconTint="@color/signal_icon_tint_primary"
        app:showAsAction="always"/>

    <item android:id="@+id/select_all"
        android:title="@string/MediaOverviewActivity_Select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:iconTint="@color/signal_icon_tint_primary"
        app:showAsAction="always"/>
</menu>
