<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_group_delivery"
        android:icon="?menu_split_icon"
        android:title="@string/conversation_group_options__delivery"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:id="@+id/distribution_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_distribution_conversation"
                    android:checked="true"
                    android:title="@string/conversation_group_options__conversation" />
                <item
                    android:id="@+id/menu_distribution_broadcast"
                    android:title="@string/conversation_group_options__broadcast" />
            </group>
        </menu>
    </item>
</menu>
